@@ -8,11 +8,14 @@ import org.mockito.MockitoAnnotations;
 import tn.esprit.tpfoyer.Entities.ChambreDTO;
 import tn.esprit.tpfoyer.Entities.EtudiantDTO;
 import tn.esprit.tpfoyer.Entities.Reservation;
+import tn.esprit.tpfoyer.Exception.ReservationException;
 import tn.esprit.tpfoyer.FeignClient.ChambreClient;
 import tn.esprit.tpfoyer.FeignClient.EtudiantClient;
 import tn.esprit.tpfoyer.Repository.ReservationRepository;
 import tn.esprit.tpfoyer.Services.ReservationServiceImpl;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
@@ -44,42 +47,52 @@ public class ReservationServiceImplTest {
     @Test
     public void testCreateReservation() {
         EtudiantDTO etudiant = new EtudiantDTO();
-        etudiant.setIdEtudiant(1L);
+        etudiant.setIdReservations(new ArrayList<>());
 
         ChambreDTO chambre = new ChambreDTO();
-        chambre.setIdChambre(1L);
+        chambre.setIdReservations(new ArrayList<>());
 
         when(etudiantClient.getEtudiantById(anyLong())).thenReturn(etudiant);
         when(chambreClient.getChambreById(anyLong())).thenReturn(chambre);
-        when(reservationRepository.findByIdEtudiantAndAnneeUniversitaireAndEstValideTrue(anyLong(), any())).thenReturn(Optional.empty());
-        when(reservationRepository.countByChambreAndAnneeUniversitaire(anyLong(), any())).thenReturn(1);
+        when(reservationRepository.findByIdEtudiantAndAnneeUniversitaireAndEstValideTrue(anyLong(), any(Date.class)))
+                .thenReturn(Optional.empty());
+        when(reservationRepository.countByChambreAndAnneeUniversitaire(anyLong(), any(Date.class))).thenReturn(0);
 
         Reservation reservation = new Reservation();
         reservation.setIdReservation("1");
+
         when(reservationRepository.save(any(Reservation.class))).thenReturn(reservation);
 
-        Reservation result = reservationService.createReservation(1L, 1L, new Date());
+        Reservation createdReservation = reservationService.createReservation(1L, 1L, new Date());
 
-        assertNotNull(result);
-        verify(etudiantClient, times(1)).updateEtudiantReservations(anyLong(), any());
-        verify(chambreClient, times(1)).updateChambreReservations(anyLong(), any());
+        assertNotNull(createdReservation);
+        assertEquals("1", createdReservation.getIdReservation());
     }
 
     @Test
     public void testCancelReservation() {
         Reservation reservation = new Reservation();
         reservation.setIdReservation("1");
-        reservation.setIdChambre(1L);
         reservation.setIdEtudiant(1L);
+        reservation.setIdChambre(1L);
         reservation.setAnneeUniversitaire(new Date());
         reservation.setEstValide(true);
 
-        when(reservationRepository.findById(anyString())).thenReturn(Optional.of(reservation));
+        EtudiantDTO etudiant = new EtudiantDTO();
+        etudiant.setIdReservations(new ArrayList<>());
+
+        ChambreDTO chambre = new ChambreDTO();
+        chambre.setIdReservations(new ArrayList<>());
+
+        when(reservationRepository.findById("1")).thenReturn(Optional.of(reservation));
+        when(etudiantClient.getEtudiantById(1L)).thenReturn(etudiant);
+        when(chambreClient.getChambreById(1L)).thenReturn(chambre);
 
         reservationService.cancelReservation("1");
 
         assertFalse(reservation.isEstValide());
-        verify(reservationRepository, times(1)).save(reservation);
+        verify(etudiantClient, times(1)).updateEtudiantReservations(anyLong(), anyList());
+        verify(chambreClient, times(1)).updateChambreReservations(anyLong(), anyList());
     }
 
     @Test
@@ -91,6 +104,7 @@ public class ReservationServiceImplTest {
 
         Reservation result = reservationService.getReservationById("1");
 
+        assertNotNull(result);
         assertEquals("1", result.getIdReservation());
     }
 
@@ -99,11 +113,12 @@ public class ReservationServiceImplTest {
         Reservation reservation = new Reservation();
         reservation.setIdReservation("1");
 
-        when(reservationRepository.findByIdEtudiant(anyLong())).thenReturn(List.of(reservation));
+        when(reservationRepository.findByIdEtudiant(anyLong())).thenReturn(Collections.singletonList(reservation));
 
         List<Reservation> reservations = reservationService.getReservationsByEtudiant(1L);
 
-        assertFalse(reservations.isEmpty());
+        assertEquals(1, reservations.size());
+        assertEquals("1", reservations.get(0).getIdReservation());
     }
 
     @Test
@@ -111,10 +126,12 @@ public class ReservationServiceImplTest {
         Reservation reservation = new Reservation();
         reservation.setIdReservation("1");
 
-        when(reservationRepository.findByIdChambreAndAnneeUniversitaireAndEstValideTrue(anyLong(), any())).thenReturn(List.of(reservation));
+        when(reservationRepository.findByIdChambreAndAnneeUniversitaireAndEstValideTrue(anyLong(), any(Date.class)))
+                .thenReturn(Collections.singletonList(reservation));
 
         List<Reservation> reservations = reservationService.getReservationsByChambreAndAnnee(1L, new Date());
 
-        assertFalse(reservations.isEmpty());
+        assertEquals(1, reservations.size());
+        assertEquals("1", reservations.get(0).getIdReservation());
     }
 }
